crates/oxc_react_compiler/tests/snapshots/ssa-property-alias-if.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/ssa-property-alias-if.js
---
import { c as _c } from "react/compiler-runtime";
function foo(a) {
	const $ = _c(4);
	let x;
	if ($[0] !== a) {
		x = {};
		if (a) {
			let t0;
			if ($[2] === Symbol.for("react.memo_cache_sentinel")) {
				t0 = {};
				$[2] = t0;
			} else {
				t0 = $[2];
			}
			const y = t0;
			x.y = y;
		} else {
			let t0;
			if ($[3] === Symbol.for("react.memo_cache_sentinel")) {
				t0 = {};
				$[3] = t0;
			} else {
				t0 = $[3];
			}
			const z = t0;
			x.z = z;
		}
		$[0] = a;
		$[1] = x;
	} else {
		x = $[1];
	}
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: foo,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
