crates/oxc_react_compiler/tests/snapshots/ssa-property-alias-mutate-if.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/ssa-property-alias-mutate-if.js
---
import { c as _c } from "react/compiler-runtime";
function foo(a) {
	const $ = _c(2);
	let x;
	if ($[0] !== a) {
		x = {};
		if (a) {
			const y = {};
			x.y = y;
		} else {
			const z = {};
			x.z = z;
		}
		mutate(x);
		$[0] = a;
		$[1] = x;
	} else {
		x = $[1];
	}
	return x;
}
