crates/oxc_react_compiler/tests/snapshots/ssa-property-mutate-alias.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/ssa-property-mutate-alias.js
---
import { c as _c } from "react/compiler-runtime";
function foo() {
	const $ = _c(1);
	let y;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		const a = {};
		y = a;
		const x = [];
		y.x = x;
		mutate(a);
		$[0] = y;
	} else {
		y = $[0];
	}
	return y;
}
