crates/oxc_react_compiler/tests/snapshots/ssa-reassign-in-rval.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/ssa-reassign-in-rval.js
---
import { c as _c } from "react/compiler-runtime";
// Forget should call the original x (x = foo()) to compute result
function Component() {
	const $ = _c(1);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		let x = foo();
		const result = x(x = bar(), 5);
		t0 = [result, x];
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	return t0;
}
