crates/oxc_react_compiler/tests/snapshots/ssa-reassign.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/ssa-reassign.js
---
function foo(a, b, c) {
	let x;
	x = c;
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: foo,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
